# multi-agent-task-runtime

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RESULTS.md  pyproject.toml  runtime-inspect  runtime-search
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependency-audit.yml  release.yml
agents/: __init__.py  base_agent.py
analytics/: __init__.py  agent_metrics.py  confidence_analysis.py  confidence_tracker.py  dependency_graph.py  drift_detector.py  failure_analyzer.py  failure_heatmap.py  memory_metrics.py  run_comparison.py  runtime_metrics.py  tool_metrics.py
assets/screenshots/: benchmark_output.txt  latest_report.html  live_dashboard.txt  replay_timeline.txt  runtime_diagram.mmd
benchmarks/: load_test.py  performance_baseline.json  performance_guard.py  runtime_benchmark.py  stress_benchmark.py
cli/: runtime_inspect.py  runtime_search.py
dashboard/: live_dashboard.py
docs/: architecture.md  operations.md  performance.md  security.md
events/: __init__.py  event.py  event_types.py  filters.py  registry.py  validation.py
examples/: multi_agent_demo.py
exporters/: __init__.py  opentelemetry_exporter.py
memory/: __init__.py  memory_store.py
reports/: __init__.py  html_report.py
runtime/: __init__.py  archive.py  config.py  coordinator.py  event_bus.py  event_logger.py  paths.py  plugins.py  registry.py  replay_engine.py  retry_manager.py  sqlite_store.py
scripts/: validate_version.py
tests/: test_agent_metrics.py  test_archive.py  test_base_agent.py  test_confidence_analysis.py  test_confidence_tracker.py  test_coordinator.py  test_custom_events.py  test_dependency_graph.py  test_drift_detector.py  test_event_bus.py  test_event_filters.py  test_event_logger.py  test_event_model.py  test_event_schema_versioning.py  test_event_validation.py  test_failure_analyzer.py  test_failure_heatmap.py  test_html_report.py  test_live_dashboard.py  test_load_test.py  test_memory_metrics.py  test_memory_store.py  test_mermaid_renderer.py  test_opentelemetry_exporter.py  test_performance_guard.py  test_plugins.py  test_registry.py  test_replay_corruption_recovery.py  test_replay_engine.py  test_replay_timeline.py  test_retry_manager.py  test_run_comparison.py  test_runtime_benchmark.py  test_runtime_config.py  test_runtime_inspect_cli.py  test_runtime_metrics.py  test_runtime_search_cli.py  test_security_hardening.py  test_sqlite_store.py  test_stress_benchmark.py  (+5 more)
tools/: __init__.py  tool_executor.py
visualization/: __init__.py  mermaid_renderer.py  replay_timeline.py  timeline_renderer.py
