[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-task-runtime"
version = "0.1.0"
description = "A runtime and observability framework for multi-agent systems."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "analytics*", "cli*", "events*", "exporters*", "memory*", "reports*", "runtime*", "tools*", "visualization*"]
