[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-task-runtime"
version = "0.1.0"
description = "A runtime and observability framework for multi-agent systems."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "analytics*", "cli*", "events*", "exporters*", "memory*", "reports*", "runtime*", "tools*", "visualization*"]

[tool.coverage.run]
branch = true
source = ["agents", "analytics", "cli", "events", "exporters", "memory", "reports", "runtime", "tools", "visualization", "scripts"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["tests/", "build/", "dist/"]

[tool.ruff]
line-length = 140
target-version = "py310"
exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
